2001-10-29  Peter Bienstman  <Peter.Bienstman@rug.ac.be>

	* generalslab.cpp: Virtualise kz.
	
2001-10-25  Peter Bienstman  <Peter.Bienstman@rug.ac.be>

        * generalslab.cpp: Add overlap integrals for off-axis incidence.
	