@@ -1,3 +1,7 @@
+2001-11-08  Peter Bienstman  <Peter.Bienstman@rug.ac.be>
+
+	* generalslab.cpp: Replace wrong kz by kz0.
+
 2001-10-29  Peter Bienstman  <Peter.Bienstman@rug.ac.be>
 
 	* generalslab.cpp: Virtualise kz.
